# literally

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE.txt  Literally.hi  Literally.hs  README.md  literally.cabal
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
