cabal-version: 3.0
name: literally
version: 0.2025.9.9
synopsis: Convert type literals into values.
description: Literally converts type literals into values.
category: Data
license: 0BSD
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/literally
  type: git

library
  build-depends: base ^>={4.20, 4.21}
  default-language: Haskell2010
  exposed-modules: Literally
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
